UI: vertical align middle the All Correct alert with container

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ a:focus {
 	max-height: 890px;
 	padding: 40px 30px 20px;
 	overflow: auto;
+	position: relative;
 }
 .header {
 	margin-bottom: 20px;
@@ -68,6 +69,7 @@ a:focus {
 }
 .button--exercise .fa {
 	color: #91CDBB;
+	margin-top: -6px;
 }
 .button--exercise:before,
 .button--exercise:after {
@@ -210,7 +212,7 @@ a:focus {
 	width: 40em;
 
 	z-index: 160;
-	position: fixed;
+	position: absolute;
 	left: 50%;
 	top: 50%;
 
